--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
             <div class="screenshots-grid">
                 <div class="screenshot-item">
                     <div class="screenshot-placeholder">
-                        <img src="/images/toolkit1.png" alt="PC Optimizer Suite Main Dashboard">
+                        <img src="images/toolkit1.png" alt="PC Optimizer Suite Main Dashboard">
                         <div class="screenshot-caption">Main Dashboard</div>
                     </div>
                 </div>
                 <div class="screenshot-item">
                     <div class="screenshot-placeholder">
-                        <img src="/images/toolkit2.png" alt="PC Optimizer Suite File Tools">
+                        <img src="images/toolkit2.png" alt="PC Optimizer Suite File Tools">
                         <div class="screenshot-caption">File Tools</div>
                     </div>
                 </div>
                 <div class="screenshot-item">
                     <div class="screenshot-placeholder">
-                        <img src="/images/toolkit3.png" alt="PC Optimizer Suite Optimizer Settings">
+                        <img src="images/toolkit3.png" alt="PC Optimizer Suite Optimizer Settings">
                         <div class="screenshot-caption">Optimizer Settings</div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
         <div class="container">
             <h2 class="section-title">Get PC Optimizer Suite</h2>
             <div class="download-content">
-                <a href="/downloads/OptimizerSetup.exe" class="btn btn-primary btn-large" download>Download for Windows</a>
+                <a href="downloads/OptimizerSetup.exe" class="btn btn-primary btn-large" download>Download for Windows</a>
                 <div class="download-info">
                     <p>Version 2.1.3</p>
                     <p>Last Update: September 2025</p>
@@ -180,7 +180,7 @@
             <div class="footer-content">
                 <p>&copy; 2025 Abhi Khade. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="#">GitHub</a>
+                    <a href="https://github.com/Abhion24" target="_blank">GitHub</a>
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
                 </div>
