--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:description" content="Boost, clean, and secure your Windows PC in one click.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://your-website-url.com">
-    <meta property="og:image" content="images/toolkit1.png">
+    <meta property="og:image" content="./images/toolkit1.png">
     <meta property="og:site_name" content="PC Optimizer Suite">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="PC Optimizer Suite">
     <meta property="twitter:description" content="Boost, clean, and secure your Windows PC in one click.">
-    <meta property="twitter:image" content="images/toolkit1.png">
+    <meta property="twitter:image" content="./images/toolkit1.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>">
@@ -697,19 +697,19 @@
             <div class="screenshots-grid">
                 <div class="screenshot-item">
                     <div class="screenshot-placeholder">
-                        <img src="images/toolkit1.png" alt="PC Optimizer Suite Main Dashboard" loading="lazy" width="800" height="600">
+                        <img src="./images/toolkit1.png" alt="PC Optimizer Suite Main Dashboard" loading="lazy" width="800" height="600">
                         <div class="screenshot-caption">Main Dashboard</div>
                     </div>
                 </div>
                 <div class="screenshot-item">
                     <div class="screenshot-placeholder">
-                        <img src="images/toolkit2.png" alt="PC Optimizer Suite File Tools" loading="lazy" width="800" height="600">
+                        <img src="./images/toolkit2.png" alt="PC Optimizer Suite File Tools" loading="lazy" width="800" height="600">
                         <div class="screenshot-caption">File Tools</div>
                     </div>
                 </div>
                 <div class="screenshot-item">
                     <div class="screenshot-placeholder">
-                        <img src="images/toolkit3.png" alt="PC Optimizer Suite Optimizer Settings" loading="lazy" width="800" height="600">
+                        <img src="./images/toolkit3.png" alt="PC Optimizer Suite Optimizer Settings" loading="lazy" width="800" height="600">
                         <div class="screenshot-caption">Optimizer Settings</div>
                     </div>
                 </div>
@@ -746,7 +746,7 @@
         <div class="container">
             <h2 class="section-title">Get PC Optimizer Suite</h2>
             <div class="download-content">
-                <a href="downloads/OptimizerSetup.exe" class="btn btn-primary btn-large" download>Download for Windows</a>
+                <a href="./downloads/OptimizerSetup.exe" class="btn btn-primary btn-large" download>Download for Windows</a>
                 <div class="download-info">
                     <p>Version 2.1.3</p>
                     <p>Last Update: September 2025</p>
